# rlsgrid

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  action.yml  index.html  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
CHANGELOG/: index.html
RECIPES/: index.html
examples/: rlsgrid.toml
examples/blog/: schema.sql
search/: search_index.json
src/rlsgrid/: __init__.py  autodetect.py  badge.py  cli.py  config.py  fixtures.py  introspect.py  matrix.py  pytest_plugin.py  safety.py  sarif.py  synth.py
src/rlsgrid/emitters/: __init__.py  pgtap.py  pytest.py
src/rlsgrid/fuzz/: __init__.py  chaos.py
tests/: test_autodetect.py  test_badge.py  test_fixtures.py  test_matrix.py  test_pgtap_emit.py  test_placeholders.py  test_plugin_and_sarif.py  test_safety.py  test_synth.py
