[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rlsgrid"
version = "0.2.0"
description = "Schema-driven Row-Level Security test matrix generator and cross-tenant fuzzer for PostgreSQL and Supabase."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Matteo Perino", email = "matteo@trygeosuite.it" }]
keywords = ["postgres", "postgresql", "supabase", "rls", "row-level-security", "testing", "pgtap", "multi-tenant", "fuzz"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Testing",
  "Topic :: Security",
]
dependencies = [
  "psycopg[binary]>=3.1",
  "click>=8.1",
  "rich>=13.7",
  "tomli>=2.0; python_version<'3.11'",
  "hypothesis>=6.100",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
rlsgrid = "rlsgrid.cli:main"

[project.urls]
Homepage = "https://github.com/matte97p/rlsgrid"
Repository = "https://github.com/matte97p/rlsgrid"
Issues = "https://github.com/matte97p/rlsgrid/issues"
Changelog = "https://github.com/matte97p/rlsgrid/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/rlsgrid"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
